// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFacetButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiFacetButton testClass1 testClass2 css-yxs46r-euiButtonDisplay-s-euiFacetButton-unSelected"
  data-test-subj="test subject string"
  title="aria-label"
>
  <span
    class="css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props icon is rendered 1`] = `
<button
  class="euiFacetButton css-yxs46r-euiButtonDisplay-s-euiFacetButton-unSelected"
>
  <span
    class="css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__icon css-xn8zfx-euiFacetButton__icon"
      data-euiicon-type="dot"
    />
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isDisabled is rendered 1`] = `
<button
  class="euiFacetButton css-243v8r-euiButtonDisplay-s-isDisabled-euiFacetButton-unSelected"
  disabled=""
>
  <span
    class="css-yxnt2m-euiButtonDisplayContent-isDisabled"
  >
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isLoading is rendered 1`] = `
<button
  class="euiFacetButton css-243v8r-euiButtonDisplay-s-isDisabled-euiFacetButton-unSelected"
  disabled=""
>
  <span
    class="css-yxnt2m-euiButtonDisplayContent-isDisabled"
  >
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
    <span
      aria-label="Loading"
      class="euiLoadingSpinner css-155ohbx-euiLoadingSpinner-m"
      role="progressbar"
    />
  </span>
</button>
`;

exports[`EuiFacetButton props isSelected is rendered 1`] = `
<button
  class="euiFacetButton css-1u0ffnm-euiButtonDisplay-s-euiFacetButton-isSelected"
>
  <span
    class="css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__text css-lsg4df-euiFacetButton__text-isSelected"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props quantity is rendered 1`] = `
<button
  class="euiFacetButton css-yxs46r-euiButtonDisplay-s-euiFacetButton-unSelected"
>
  <span
    class="css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
    <span
      class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFacetButton__quantity css-1axxfch-euiFacetButton__quantity"
    >
      60
    </span>
  </span>
</button>
`;
